--- a/RealEstateApp.WebApi/appsettings.json
+++ b/RealEstateApp.WebApi/appsettings.json
@@ -1,9 +1,28 @@
 {
+  "UseInMemoryDatabase": false,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=Abner;Database=RealState;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "IdentityConnection": "Server=Abner;Database=RealState;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MailSettings": {
+    "EmailFrom": "msnloco247@gmail.com",
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUser": "msnloco247@gmail.com",
+    "SmtpPass": "bupkevzwvgtlibwy",
+    "DisplayName": "RealEstate Mail"
+  },
+  "JWTSettings": {
+    "Key": "C1CF4B7DC4C4175B6618DE4F55CA4X3FDAE",
+    "Issuer": "CodeIdentity",
+    "Audience": "RestauranteApiUser",
+    "DurationInMinutes": 60
   },
   "AllowedHosts": "*"
 }
