--- a/RealEstateApp.WebApp/RealEstateApp.WebApp.csproj
+++ b/RealEstateApp.WebApp/RealEstateApp.WebApp.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\RealEstateApp.Infrastructure.Shared\RealEstateApp.Infrastructure.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\User\" />
+  </ItemGroup>
+
 </Project>
