--- a/RealEstateApp.WebApp/appsettings.Development.json
+++ b/RealEstateApp.WebApp/appsettings.Development.json
@@ -1,8 +1,25 @@
 {
+  "UseInMemoryDatabase": false,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=RealState;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "IdentityConnection": "Server=localhost;Database=RealState;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "MailSettings": {
+    "EmailFrom": "msnloco247@gmail.com",
+    "SmtpHost": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SmtpUser": "msnloco247@gmail.com",
+    "SmtpPass": "bupkevzwvgtlibwy",
+    "DisplayName": "RealState Mail"
+
+
+  },
+
+  "AllowedHosts": "*"
 }
