--- a/RealEstateApp.WebApp/appsettings.Development.json
+++ b/RealEstateApp.WebApp/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "UseInMemoryDatabase": false,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=;Database=RealEstateApp;Trusted_Connection=true;TrustServerCertificate=True;MultipleActiveResultSets=True",
+    "IdentityConnection": "Server=;Database=RealEstateApp;Trusted_Connection=true;TrustServerCertificate=True;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
