--- a/RealEstateApp.Infrastructure.Identity/RealEstateApp.Infrastructure.Identity.csproj
+++ b/RealEstateApp.Infrastructure.Identity/RealEstateApp.Infrastructure.Identity.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\RealEstateApp.Core.Application\RealEstateApp.Core.Application.csproj" />
     <ProjectReference Include="..\RealEstateApp.Core.Domain\RealEstateApp.Core.Domain.csproj" />
+    <ProjectReference Include="..\RealEstateApp.Infrastructure.Persistence\RealEstateApp.Infrastructure.Persistence.csproj" />
     <ProjectReference Include="..\RealEstateApp.Infrastructure.Shared\RealEstateApp.Infrastructure.Shared.csproj" />
   </ItemGroup>
 
