--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /RealEstateApp.WebApp/appsettings.json
+/RealEstateApp.WebApp/wwwroot/Images/
