Auth Styles and Fixing Agents

--- a/RealEstateApp.WebApi/appsettings.json
+++ b/RealEstateApp.WebApi/appsettings.json
@@ -1,8 +1,8 @@
 {
   "UseInMemoryDatabase": false,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Abner;Database=RealState;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True",
-    "IdentityConnection": "Server=Abner;Database=RealState;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=RealState;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "IdentityConnection": "Server=localhost;Database=RealState;Trusted_Connection=true;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
