--- a/RealEstateApp.WebApp/RealEstateApp.WebApp.csproj
+++ b/RealEstateApp.WebApp/RealEstateApp.WebApp.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <Folder Include="Views\User\" />
     <Folder Include="wwwroot\Images\" />
+    <Folder Include="wwwroot\ProjectImages\" />
   </ItemGroup>
 
 </Project>
